feat: video actions for short-video-service
